--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,8 @@
 /* styles.css */
-
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
+    background-color: #2948a6;
+    color: #f5f5f5;
     margin: 0;
     padding: 20px;
-    cursor: url('cursor.png') 16 16, auto; /* 适用于其他浏览器 */
-    }
-
-h1 {
-    color: #2c3e50;
-}
-
-
-.custom-cursor {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background-image: url('cursor.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    pointer-events: none;
-    transition: transform 0.1s;
-}
-
-body:hover .custom-cursor {
-    transform: translate(-50%, -50%) scale(1.5);
-}
-
-body {
-    cursor: none;
 }
